--- a/demo/frontend/index.html
+++ b/demo/frontend/index.html
@@ -1,23 +1,22 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Statuta (Mock)</title>
-    <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin:0; }
-      header { padding: 12px 16px; border-bottom: 1px solid #eee; }
-      main { padding: 16px; max-width: 1100px; margin: 0 auto; }
-      .grid { display: grid; gap: 16px; grid-template-columns: 1fr 1fr; }
-      .card { border: 1px solid #e5e7eb; border-radius: 8px; padding: 12px; }
-      .ok { color: #065f46; }
-      .warn { color: #b45309; }
-      .err { color: #991b1b; }
-      code, pre { background: #f7f7f7; padding: 2px 4px; border-radius: 4px; }
-      button { padding: 8px 12px; border-radius: 6px; border: 1px solid #d1d5db; background: #fff; cursor: pointer; }
-      button.primary { background:#111827; color:#fff; border-color:#111827; }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Statuta - Visual Git Diff for Swiss Statutes</title>
+    <meta name="description" content="Git-native form & process linter for Swiss Statuten. Calm, precise, evidence-first." />
+    <meta name="author" content="Statuta" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="Statuta - Visual Git Diff for Swiss Statutes" />
+    <meta property="og:description" content="Git-native form & process linter for Swiss Statuten" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
