clean frontend by codex

--- a/demo/frontend/index.html
+++ b/demo/frontend/index.html
@@ -2,21 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Statuta – Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Statuta - Visual Git Diff for Swiss Statutes</title>
-    <meta name="description" content="Git-native form & process linter for Swiss Statuten. Calm, precise, evidence-first." />
-    <meta name="author" content="Statuta" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-    <meta property="og:title" content="Statuta - Visual Git Diff for Swiss Statutes" />
-    <meta property="og:description" content="Git-native form & process linter for Swiss Statuten" />
-    <meta property="og:type" content="website" />
-
-    <meta name="twitter:card" content="summary_large_image" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
